Fix Windows HttpHandler missing module